# ParaLensFE

./: .gitignore  Analysebericht_Diplomarbeit.md  DIPLOMARBEIT_GLIEDERUNG.md  Lektorat_Report_ParaLensIM.md  PROJECT_DOCUMENTATION.md  arbeits-studen.adoc  install_dependencies.bat  main.py  package-lock.json  requirements.txt  run.bat  settings.gradle.kts
ParaLensApp/: .easignore  .env.example  .eslintrc.js  .gitignore  API_FOUNDATION_README.md  App.tsx  BULLETPROOF_STRUCTURE.md  CameraScreen.tsx  README.md  REFACTORING_SUMMARY.md  SCREEN_DETECTION_ANALYSIS.md  VISION_CAMERA_OCR_SETUP.md  app.json  babel.config.js  eas.json  eslint.config.js  index.js  metro.config.js  package-lock.json  package.json  plan-continueButtonFilteredOcrFields.prompt.md  plan-ocrFieldDisplay.prompt.md  plan-screenshotPerSection.prompt.md  plan-scrollbarValueDisplay.prompt.md  tsconfig.json  tsconfig.paths.json
ParaLensApp/libs/vision-camera-screen-detector/android/: CMakeLists.txt  build.gradle  gradle.properties
ParaLensApp/libs/vision-camera-screen-detector/android/src/main/cpp/: cpp-adapter.cpp
ParaLensApp/libs/vision-camera-screen-detector/android/src/main/java/com/Alex8734/visioncamerascreendetector/visioncamerascreendetector/: DebugHttpStreamer.kt  ImageProcessing.kt  OcrProcessor.kt  ScreenDetection.kt  ScreenFrameProcessorPlugin.kt  ScreenFrameProcessorPluginPackage.kt  ScreenFrameProcessorPluginRegistry.kt  Utils.kt
ParaLensApp/libs/vision-camera-screen-detector/android/src/main/java/com/margelo/nitro/screendetector/: HybridScreenDetector.kt
app/: build.gradle.kts
(+303 files in other folders)
